feat: Troca da controllers e swagger 'usuario'para 'usuarios'e 'local' para 'destinos'
