# src/routes/destino.routes.js
@@ -4,7 +4,8 @@ const destinoRoutes = new Router()
 const { auth } = require('../middleware/auth')
 
 destinoRoutes.post('/', auth, DestinoController.cadastrar)
-destinoRoutes.get('/', auth, DestinoController.listar)
+destinoRoutes.get('/', DestinoController.listarTodos)
+destinoRoutes.get('/destinos_usuario/:id', auth, DestinoController.listarDestinosUsuario)
 destinoRoutes.get('/:id', auth, DestinoController.listarUm)
 destinoRoutes.put('/:id', auth, DestinoController.atualizar)
 destinoRoutes.delete('/:id', auth, DestinoController.excluir)
